# maytrix-libs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
maytrix-domain/: Cargo.toml
maytrix-domain/src/: lib.rs
maytrix-value/: Cargo.toml
maytrix-value/src/: lib.rs  symbol.rs
src/: lib.rs
