[package]
name = "maytrix-domain"
version = "0.1.1"
edition = "2021"
description = "Maytrix domain library to support functional domain models"
license = "MIT"
repository = "https://github.com/iSynaptic/maytrix-libs"

[lib]
name = "maytrix_domain"
path = "src/lib.rs"

#[dependencies]
#maytrix-value = { version = "0.1.1", path = "../maytrix-value" }
